GNOME Bugzilla – Bug 775116
Segfault when running d-feet on Wayland
Last modified: 2016-11-28 10:14:43 UTC
The code doesn't check hard enough if the display is a X11 display, add a couple more checks to prevent d-feet from crashing on Wayland.
Created attachment 340776 [details] [review] screen: Check for Wayland display The current code doesn't check hard enough and segfaults when starting d-feet.
Review of attachment 340776 [details] [review]: Thanks!