screen: Check for Wayland display

The current code doesn't check hard enough and segfaults when
starting d-feet.

https://bugzilla.gnome.org/show_bug.cgi?id=775116